# ocr-test

./: .gitignore  CMakeLists.txt  build.sh  init-rasp.sh  install.sh
include/: Application.hpp  Button.hpp  Line.hpp  Ocr.hpp
src/: Application.cpp  Button.cpp  CMakeLists.txt  Ocr.cpp  main.cpp
